# trace-pilot

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/tracepilot_api/: __init__.py  main.py
apps/api/tracepilot_api/core/: __init__.py  deps.py  errors.py  runtime.py  store.py
apps/api/tracepilot_api/routes/: __init__.py  chat.py  evals.py  health.py  investigate.py  repositories.py  review.py  tools.py  traces.py  workspaces.py
apps/api/tracepilot_api/services/: __init__.py  indexing_service.py  repository_service.py  workspace_service.py
apps/web/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: EvidenceDrawer.tsx  LanguageBar.tsx  RepoCard.tsx  Sidebar.tsx  Topbar.tsx  TraceDrawer.tsx  WorkspaceProvider.tsx
apps/web/lib/: api.ts  format.ts  types.ts  useCopy.ts
docs/: INTERNAL_CONTRACTS.md  agent-graph.md  architecture.md  evaluations.md  local-development.md  retrieval.md  security.md
infra/docker/: api.Dockerfile  web.Dockerfile
scripts/: install_packages.sh  seed_demo.py
scripts/demo_repo/: README.md  __init__.py  accounts.py  app.py  money.py  service.py  test_service.py  validation.py
scripts/demo_repo/docs/: transfers.md
tests/: conftest.py  test_agent_state.py  test_api.py  test_chunking.py  test_evals_metrics.py  test_prompts.py  test_retrieval_fusion.py  test_shared_models.py  test_tooling_sandbox.py
(+20 files in other folders)
