[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracepilot-api"
version = "0.1.0"
description = "FastAPI backend for TracePilot"
requires-python = ">=3.11"
dependencies = [
    "tracepilot-shared",
    "tracepilot-retrieval",
    "tracepilot-agent",
    "tracepilot-tooling",
    "tracepilot-evals",
    "tracepilot-prompts",
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.30,<0.35",
    "pydantic>=2.6,<3",
    "redis>=5.0,<6",
    "httpx>=0.27,<0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "anyio>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracepilot_api*"]
